feature: implemented classification-label-sizes
