# src/adv_xai_fulfilment/presentation/validator/data_presentation_validator.py
@@ -2,6 +2,11 @@ from .abstract_validator import AbstractValidator
 
 
 class DataPresentationValidator(AbstractValidator):
+    def validate_and_sanitize_class_label_sizes(self, request: dict = {}) -> dict:
+        self._validate_model(request.get("model"))
+        self._validate_partner(request.get("partner"))
+        return self._merge_with_default_values(request)
+    
     def validate_and_sanitize_targets(self, request: dict = {}) -> dict:
         self._validate_model(request.get("model"))
         self._validate_partner(request.get("partner"))
